[gd_scene load_steps=8 format=3 uid="uid://mt438blt7tfs"]

[ext_resource type="Texture2D" uid="uid://bdtvryqjmyi0a" path="res://Images/prota.png" id="1_gt5x6"]
[ext_resource type="Script" path="res://player.gd" id="1_oew8v"]
[ext_resource type="Script" path="res://PlayerWeapon.gd" id="3_jupg8"]
[ext_resource type="Script" path="res://EnemySpawner.gd" id="4_xk6j2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyytj"]
size = Vector2(17.0667, 25.8667)

[sub_resource type="CircleShape2D" id="CircleShape2D_2hl1n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_80a5s"]

[node name="Player" type="Area2D" groups=["players"]]
script = ExtResource("1_oew8v")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["players"]]
position = Vector2(-2.00005, -3.42086)
scale = Vector2(0.3584, 0.353937)
texture = ExtResource("1_gt5x6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(44, -44)
scale = Vector2(30, 30)
shape = SubResource("RectangleShape2D_lyytj")

[node name="GhostDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostDetector"]
scale = Vector2(75, 75)
shape = SubResource("CircleShape2D_2hl1n")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Weapon" type="Marker2D" parent="."]
script = ExtResource("3_jupg8")

[node name="TopRight" type="Marker2D" parent="Weapon" groups=["fireflies"]]
position = Vector2(306, -175)

[node name="BottonLeft" type="Marker2D" parent="Weapon" groups=["fireflies"]]
position = Vector2(-293, 185)

[node name="EnemyDetector" type="Area2D" parent="Weapon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/EnemyDetector"]
scale = Vector2(350, 350)
shape = SubResource("CircleShape2D_80a5s")

[node name="Spawner" type="Marker2D" parent="."]
script = ExtResource("4_xk6j2")

[node name="Top" type="Marker2D" parent="Spawner"]
position = Vector2(0, -4839)

[node name="TopRight" type="Marker2D" parent="Spawner"]
position = Vector2(6604, -4522)

[node name="Right" type="Marker2D" parent="Spawner"]
position = Vector2(6858, 458)

[node name="BottonRight" type="Marker2D" parent="Spawner"]
position = Vector2(6958, 4927)

[node name="Botton" type="Marker2D" parent="Spawner"]
position = Vector2(50, 5333)

[node name="BottonLeft" type="Marker2D" parent="Spawner"]
position = Vector2(-6300, 5257)

[node name="Left" type="Marker2D" parent="Spawner"]
position = Vector2(-6782, 26)

[node name="TopLeft" type="Marker2D" parent="Spawner"]
position = Vector2(-6985, -4622)

[node name="EnemySpawnerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="EnemySpawnerTimer" to="." method="_on_enemy_spawner_timer_timeout"]
